--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# MarshallOlkinPSG package
+# MarshallOlkinPSG package  <img src="logo.png" align="right" alt="" width="180" />
 
 <!-- badges: start -->
 <!-- badges: end -->
